fixed spacing of toppings

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
 		@apply px-10 py-1 sm:px-20 sm:py-3 bg-pizzaRed-300 text-gray-100 md:text-2xl text-xl font-semibold tracking-wider rounded shadow-md hover:bg-pizzaRed-400 hover:text-white 
 	}
 	.btn-menu-nav {
-		@apply font-bold text-white bg-black  md:text-gray-200 p-2 sm:px-4 sm:py-2 text-xs sm:text-base md:text-lg lg:text-xl rounded h-full sm:tracking-widest
+		@apply font-bold text-white bg-black  md:text-gray-200  px-2 py-3 sm:px-4 sm:py-3 text-xs sm:text-base md:text-lg lg:text-xl rounded h-full sm:tracking-widest
 	}
 	.btn-menu-focused {
 		@apply border-pizzaRed-300 bg-pizzaRed-400 text-white transition duration-1000 md:font-normal font-bold
